// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Comment /> <Comment /> not shown and focus should render correctly 1`] = `
<li
  className="opinion opinion--comment"
>
  <div
    className="opinion__body"
  >
    <div
      className="opinion__content"
    >
      <Connect(UserAvatarDeprecated)
        user={
          Object {
            "displayName": "admin",
            "media": null,
            "vip": true,
          }
        }
      />
      <div
        className="comment__detail"
      >
        <div
          className="bg-vip comment__descripton"
          id="comment_proposalComment1"
        >
          <div
            className="opinion__data"
          >
            <ForwardRef(Relay(CommentInfos))
              comment={
                Object {
                  "$fragmentRefs": null,
                  "$refType": null,
                  "author": Object {
                    "displayName": "admin",
                    "media": null,
                    "vip": true,
                  },
                  "id": "proposalComment1",
                }
              }
            />
          </div>
          <ForwardRef(Relay(CommentBody))
            comment={
              Object {
                "$fragmentRefs": null,
                "$refType": null,
                "author": Object {
                  "displayName": "admin",
                  "media": null,
                  "vip": true,
                },
                "id": "proposalComment1",
              }
            }
          />
        </div>
        <div
          className="comment__action"
        >
          <ForwardRef(Relay(CommentDate))
            comment={
              Object {
                "$fragmentRefs": null,
                "$refType": null,
                "author": Object {
                  "displayName": "admin",
                  "media": null,
                  "vip": true,
                },
                "id": "proposalComment1",
              }
            }
          />
          <div
            className="comment__buttons"
          >
            <ForwardRef(Relay(CommentVoteButton))
              comment={
                Object {
                  "$fragmentRefs": null,
                  "$refType": null,
                  "author": Object {
                    "displayName": "admin",
                    "media": null,
                    "vip": true,
                  },
                  "id": "proposalComment1",
                }
              }
            />
             
            <Button
              active={false}
              block={false}
              bsClass="btn"
              bsSize="sm"
              bsStyle="link"
              className="btn-dark-gray btn--outline"
              disabled={false}
              onClick={[Function]}
            >
              <i
                className="cap-reply-mail-2"
              />
               
              <FormattedMessage
                id="global.answer"
                values={Object {}}
              />
            </Button>
             
            <ForwardRef(Relay(Connect(CommentReportButton)))
              comment={
                Object {
                  "$fragmentRefs": null,
                  "$refType": null,
                  "author": Object {
                    "displayName": "admin",
                    "media": null,
                    "vip": true,
                  },
                  "id": "proposalComment1",
                }
              }
            />
             
            <ForwardRef(Relay(CommentEdit))
              comment={
                Object {
                  "$fragmentRefs": null,
                  "$refType": null,
                  "author": Object {
                    "displayName": "admin",
                    "media": null,
                    "vip": true,
                  },
                  "id": "proposalComment1",
                }
              }
            />
             
          </div>
        </div>
      </div>
    </div>
    <div
      className="comment-answers-block"
    >
      <ForwardRef(Relay(CommentAnswers))
        comment={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
            "author": Object {
              "displayName": "admin",
              "media": null,
              "vip": true,
            },
            "id": "proposalComment1",
          }
        }
      />
    </div>
  </div>
</li>
`;

exports[`<Comment /> <Comment /> not shown and not focus should render correctly 1`] = `
<li
  className="opinion opinion--comment"
>
  <div
    className="opinion__body"
  >
    <div
      className="opinion__content"
    >
      <Connect(UserAvatarDeprecated)
        user={
          Object {
            "displayName": "admin",
            "media": null,
            "vip": true,
          }
        }
      />
      <div
        className="comment__detail"
      >
        <div
          className="bg-vip comment__descripton"
          id="comment_proposalComment1"
        >
          <div
            className="opinion__data"
          >
            <ForwardRef(Relay(CommentInfos))
              comment={
                Object {
                  "$fragmentRefs": null,
                  "$refType": null,
                  "author": Object {
                    "displayName": "admin",
                    "media": null,
                    "vip": true,
                  },
                  "id": "proposalComment1",
                }
              }
            />
          </div>
          <ForwardRef(Relay(CommentBody))
            comment={
              Object {
                "$fragmentRefs": null,
                "$refType": null,
                "author": Object {
                  "displayName": "admin",
                  "media": null,
                  "vip": true,
                },
                "id": "proposalComment1",
              }
            }
          />
        </div>
        <div
          className="comment__action"
        >
          <ForwardRef(Relay(CommentDate))
            comment={
              Object {
                "$fragmentRefs": null,
                "$refType": null,
                "author": Object {
                  "displayName": "admin",
                  "media": null,
                  "vip": true,
                },
                "id": "proposalComment1",
              }
            }
          />
          <div
            className="comment__buttons"
          >
            <ForwardRef(Relay(CommentVoteButton))
              comment={
                Object {
                  "$fragmentRefs": null,
                  "$refType": null,
                  "author": Object {
                    "displayName": "admin",
                    "media": null,
                    "vip": true,
                  },
                  "id": "proposalComment1",
                }
              }
            />
             
            <Button
              active={false}
              block={false}
              bsClass="btn"
              bsSize="sm"
              bsStyle="link"
              className="btn-dark-gray btn--outline"
              disabled={false}
              onClick={[Function]}
            >
              <i
                className="cap-reply-mail-2"
              />
               
              <FormattedMessage
                id="global.answer"
                values={Object {}}
              />
            </Button>
             
            <ForwardRef(Relay(Connect(CommentReportButton)))
              comment={
                Object {
                  "$fragmentRefs": null,
                  "$refType": null,
                  "author": Object {
                    "displayName": "admin",
                    "media": null,
                    "vip": true,
                  },
                  "id": "proposalComment1",
                }
              }
            />
             
            <ForwardRef(Relay(CommentEdit))
              comment={
                Object {
                  "$fragmentRefs": null,
                  "$refType": null,
                  "author": Object {
                    "displayName": "admin",
                    "media": null,
                    "vip": true,
                  },
                  "id": "proposalComment1",
                }
              }
            />
             
          </div>
        </div>
      </div>
    </div>
    <div
      className="comment-answers-block"
    >
      <ForwardRef(Relay(CommentAnswers))
        comment={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
            "author": Object {
              "displayName": "admin",
              "media": null,
              "vip": true,
            },
            "id": "proposalComment1",
          }
        }
      />
    </div>
  </div>
</li>
`;

exports[`<Comment /> <Comment /> shown and focus should render correctly 1`] = `
<li
  className="opinion opinion--comment"
>
  <div
    className="opinion__body"
  >
    <div
      className="opinion__content"
    >
      <Connect(UserAvatarDeprecated)
        user={
          Object {
            "displayName": "admin",
            "media": null,
            "vip": true,
          }
        }
      />
      <div
        className="comment__detail"
      >
        <div
          className="bg-vip comment__descripton"
          id="comment_proposalComment1"
        >
          <div
            className="opinion__data"
          >
            <ForwardRef(Relay(CommentInfos))
              comment={
                Object {
                  "$fragmentRefs": null,
                  "$refType": null,
                  "author": Object {
                    "displayName": "admin",
                    "media": null,
                    "vip": true,
                  },
                  "id": "proposalComment1",
                }
              }
            />
          </div>
          <ForwardRef(Relay(CommentBody))
            comment={
              Object {
                "$fragmentRefs": null,
                "$refType": null,
                "author": Object {
                  "displayName": "admin",
                  "media": null,
                  "vip": true,
                },
                "id": "proposalComment1",
              }
            }
          />
        </div>
        <div
          className="comment__action"
        >
          <ForwardRef(Relay(CommentDate))
            comment={
              Object {
                "$fragmentRefs": null,
                "$refType": null,
                "author": Object {
                  "displayName": "admin",
                  "media": null,
                  "vip": true,
                },
                "id": "proposalComment1",
              }
            }
          />
          <div
            className="comment__buttons"
          >
            <ForwardRef(Relay(CommentVoteButton))
              comment={
                Object {
                  "$fragmentRefs": null,
                  "$refType": null,
                  "author": Object {
                    "displayName": "admin",
                    "media": null,
                    "vip": true,
                  },
                  "id": "proposalComment1",
                }
              }
            />
             
            <Button
              active={false}
              block={false}
              bsClass="btn"
              bsSize="sm"
              bsStyle="link"
              className="btn-dark-gray btn--outline"
              disabled={false}
              onClick={[Function]}
            >
              <i
                className="cap-reply-mail-2"
              />
               
              <FormattedMessage
                id="global.answer"
                values={Object {}}
              />
            </Button>
             
            <ForwardRef(Relay(Connect(CommentReportButton)))
              comment={
                Object {
                  "$fragmentRefs": null,
                  "$refType": null,
                  "author": Object {
                    "displayName": "admin",
                    "media": null,
                    "vip": true,
                  },
                  "id": "proposalComment1",
                }
              }
            />
             
            <ForwardRef(Relay(CommentEdit))
              comment={
                Object {
                  "$fragmentRefs": null,
                  "$refType": null,
                  "author": Object {
                    "displayName": "admin",
                    "media": null,
                    "vip": true,
                  },
                  "id": "proposalComment1",
                }
              }
            />
             
          </div>
        </div>
      </div>
    </div>
    <div
      className="comment-answers-block"
    >
      <ForwardRef(Relay(CommentAnswers))
        comment={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
            "author": Object {
              "displayName": "admin",
              "media": null,
              "vip": true,
            },
            "id": "proposalComment1",
          }
        }
      />
      <ForwardRef(Relay(Connect(ReduxForm)))
        answerOf="proposalComment1"
        commentable={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
            "author": Object {
              "displayName": "admin",
              "media": null,
              "vip": true,
            },
            "id": "proposalComment1",
          }
        }
      />
    </div>
  </div>
</li>
`;

exports[`<Comment /> <Comment /> shown and not focus should render correctly 1`] = `
<li
  className="opinion opinion--comment"
>
  <div
    className="opinion__body"
  >
    <div
      className="opinion__content"
    >
      <Connect(UserAvatarDeprecated)
        user={
          Object {
            "displayName": "admin",
            "media": null,
            "vip": true,
          }
        }
      />
      <div
        className="comment__detail"
      >
        <div
          className="bg-vip comment__descripton"
          id="comment_proposalComment1"
        >
          <div
            className="opinion__data"
          >
            <ForwardRef(Relay(CommentInfos))
              comment={
                Object {
                  "$fragmentRefs": null,
                  "$refType": null,
                  "author": Object {
                    "displayName": "admin",
                    "media": null,
                    "vip": true,
                  },
                  "id": "proposalComment1",
                }
              }
            />
          </div>
          <ForwardRef(Relay(CommentBody))
            comment={
              Object {
                "$fragmentRefs": null,
                "$refType": null,
                "author": Object {
                  "displayName": "admin",
                  "media": null,
                  "vip": true,
                },
                "id": "proposalComment1",
              }
            }
          />
        </div>
        <div
          className="comment__action"
        >
          <ForwardRef(Relay(CommentDate))
            comment={
              Object {
                "$fragmentRefs": null,
                "$refType": null,
                "author": Object {
                  "displayName": "admin",
                  "media": null,
                  "vip": true,
                },
                "id": "proposalComment1",
              }
            }
          />
          <div
            className="comment__buttons"
          >
            <ForwardRef(Relay(CommentVoteButton))
              comment={
                Object {
                  "$fragmentRefs": null,
                  "$refType": null,
                  "author": Object {
                    "displayName": "admin",
                    "media": null,
                    "vip": true,
                  },
                  "id": "proposalComment1",
                }
              }
            />
             
            <Button
              active={false}
              block={false}
              bsClass="btn"
              bsSize="sm"
              bsStyle="link"
              className="btn-dark-gray btn--outline"
              disabled={false}
              onClick={[Function]}
            >
              <i
                className="cap-reply-mail-2"
              />
               
              <FormattedMessage
                id="global.answer"
                values={Object {}}
              />
            </Button>
             
            <ForwardRef(Relay(Connect(CommentReportButton)))
              comment={
                Object {
                  "$fragmentRefs": null,
                  "$refType": null,
                  "author": Object {
                    "displayName": "admin",
                    "media": null,
                    "vip": true,
                  },
                  "id": "proposalComment1",
                }
              }
            />
             
            <ForwardRef(Relay(CommentEdit))
              comment={
                Object {
                  "$fragmentRefs": null,
                  "$refType": null,
                  "author": Object {
                    "displayName": "admin",
                    "media": null,
                    "vip": true,
                  },
                  "id": "proposalComment1",
                }
              }
            />
             
          </div>
        </div>
      </div>
    </div>
    <div
      className="comment-answers-block"
    >
      <ForwardRef(Relay(CommentAnswers))
        comment={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
            "author": Object {
              "displayName": "admin",
              "media": null,
              "vip": true,
            },
            "id": "proposalComment1",
          }
        }
      />
      <ForwardRef(Relay(Connect(ReduxForm)))
        answerOf="proposalComment1"
        commentable={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
            "author": Object {
              "displayName": "admin",
              "media": null,
              "vip": true,
            },
            "id": "proposalComment1",
          }
        }
      />
    </div>
  </div>
</li>
`;

exports[`<Comment /> should render correctly highlighted 1`] = `
<li
  className="opinion opinion--comment"
>
  <div
    className="opinion__body"
  >
    <div
      className="opinion__content"
    >
      <Connect(UserAvatarDeprecated)
        user={
          Object {
            "displayName": "jcVandam",
            "media": Object {
              "url": "http://perdu.com/image.jpg",
            },
            "vip": true,
          }
        }
      />
      <div
        className="comment__detail"
      >
        <div
          className="bg-vip comment__descripton highlighted-comment"
          id="comment_comment1"
        >
          <div
            className="opinion__data"
          >
            <ForwardRef(Relay(CommentInfos))
              comment={
                Object {
                  "$fragmentRefs": null,
                  "$refType": null,
                  "author": Object {
                    "displayName": "jcVandam",
                    "media": Object {
                      "url": "http://perdu.com/image.jpg",
                    },
                    "vip": true,
                  },
                  "id": "comment1",
                }
              }
            />
          </div>
          <ForwardRef(Relay(CommentBody))
            comment={
              Object {
                "$fragmentRefs": null,
                "$refType": null,
                "author": Object {
                  "displayName": "jcVandam",
                  "media": Object {
                    "url": "http://perdu.com/image.jpg",
                  },
                  "vip": true,
                },
                "id": "comment1",
              }
            }
          />
        </div>
        <div
          className="comment__action"
        >
          <ForwardRef(Relay(CommentDate))
            comment={
              Object {
                "$fragmentRefs": null,
                "$refType": null,
                "author": Object {
                  "displayName": "jcVandam",
                  "media": Object {
                    "url": "http://perdu.com/image.jpg",
                  },
                  "vip": true,
                },
                "id": "comment1",
              }
            }
          />
          <div
            className="comment__buttons"
          >
            <ForwardRef(Relay(CommentVoteButton))
              comment={
                Object {
                  "$fragmentRefs": null,
                  "$refType": null,
                  "author": Object {
                    "displayName": "jcVandam",
                    "media": Object {
                      "url": "http://perdu.com/image.jpg",
                    },
                    "vip": true,
                  },
                  "id": "comment1",
                }
              }
            />
             
            <Button
              active={false}
              block={false}
              bsClass="btn"
              bsSize="sm"
              bsStyle="link"
              className="btn-dark-gray btn--outline"
              disabled={false}
              onClick={[Function]}
            >
              <i
                className="cap-reply-mail-2"
              />
               
              <FormattedMessage
                id="global.answer"
                values={Object {}}
              />
            </Button>
             
            <ForwardRef(Relay(Connect(CommentReportButton)))
              comment={
                Object {
                  "$fragmentRefs": null,
                  "$refType": null,
                  "author": Object {
                    "displayName": "jcVandam",
                    "media": Object {
                      "url": "http://perdu.com/image.jpg",
                    },
                    "vip": true,
                  },
                  "id": "comment1",
                }
              }
            />
             
            <ForwardRef(Relay(CommentEdit))
              comment={
                Object {
                  "$fragmentRefs": null,
                  "$refType": null,
                  "author": Object {
                    "displayName": "jcVandam",
                    "media": Object {
                      "url": "http://perdu.com/image.jpg",
                    },
                    "vip": true,
                  },
                  "id": "comment1",
                }
              }
            />
             
          </div>
        </div>
      </div>
    </div>
    <div
      className="comment-answers-block"
    >
      <ForwardRef(Relay(CommentAnswers))
        comment={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
            "author": Object {
              "displayName": "jcVandam",
              "media": Object {
                "url": "http://perdu.com/image.jpg",
              },
              "vip": true,
            },
            "id": "comment1",
          }
        }
      />
    </div>
  </div>
</li>
`;

exports[`<Comment /> should render correctly not highlighted 1`] = `
<li
  className="opinion opinion--comment"
>
  <div
    className="opinion__body"
  >
    <div
      className="opinion__content"
    >
      <Connect(UserAvatarDeprecated)
        user={
          Object {
            "displayName": "jcVandam",
            "media": null,
            "vip": true,
          }
        }
      />
      <div
        className="comment__detail"
      >
        <div
          className="bg-vip comment__descripton"
          id="comment_comment2"
        >
          <div
            className="opinion__data"
          >
            <ForwardRef(Relay(CommentInfos))
              comment={
                Object {
                  "$fragmentRefs": null,
                  "$refType": null,
                  "author": Object {
                    "displayName": "jcVandam",
                    "media": null,
                    "vip": true,
                  },
                  "id": "comment2",
                }
              }
            />
          </div>
          <ForwardRef(Relay(CommentBody))
            comment={
              Object {
                "$fragmentRefs": null,
                "$refType": null,
                "author": Object {
                  "displayName": "jcVandam",
                  "media": null,
                  "vip": true,
                },
                "id": "comment2",
              }
            }
          />
        </div>
        <div
          className="comment__action"
        >
          <ForwardRef(Relay(CommentDate))
            comment={
              Object {
                "$fragmentRefs": null,
                "$refType": null,
                "author": Object {
                  "displayName": "jcVandam",
                  "media": null,
                  "vip": true,
                },
                "id": "comment2",
              }
            }
          />
          <div
            className="comment__buttons"
          >
            <ForwardRef(Relay(CommentVoteButton))
              comment={
                Object {
                  "$fragmentRefs": null,
                  "$refType": null,
                  "author": Object {
                    "displayName": "jcVandam",
                    "media": null,
                    "vip": true,
                  },
                  "id": "comment2",
                }
              }
            />
             
            <Button
              active={false}
              block={false}
              bsClass="btn"
              bsSize="sm"
              bsStyle="link"
              className="btn-dark-gray btn--outline"
              disabled={false}
              onClick={[Function]}
            >
              <i
                className="cap-reply-mail-2"
              />
               
              <FormattedMessage
                id="global.answer"
                values={Object {}}
              />
            </Button>
             
            <ForwardRef(Relay(Connect(CommentReportButton)))
              comment={
                Object {
                  "$fragmentRefs": null,
                  "$refType": null,
                  "author": Object {
                    "displayName": "jcVandam",
                    "media": null,
                    "vip": true,
                  },
                  "id": "comment2",
                }
              }
            />
             
            <ForwardRef(Relay(CommentEdit))
              comment={
                Object {
                  "$fragmentRefs": null,
                  "$refType": null,
                  "author": Object {
                    "displayName": "jcVandam",
                    "media": null,
                    "vip": true,
                  },
                  "id": "comment2",
                }
              }
            />
             
          </div>
        </div>
      </div>
    </div>
    <div
      className="comment-answers-block"
    >
      <ForwardRef(Relay(CommentAnswers))
        comment={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
            "author": Object {
              "displayName": "jcVandam",
              "media": null,
              "vip": true,
            },
            "id": "comment2",
          }
        }
      />
      <ForwardRef(Relay(Connect(ReduxForm)))
        answerOf="comment2"
        commentable={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
            "author": Object {
              "displayName": "jcVandam",
              "media": null,
              "vip": true,
            },
            "id": "comment2",
          }
        }
      />
    </div>
  </div>
</li>
`;
